Close tag and fix indents

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>LumiaGuide - Plan Optimization Tool for Eternal Return: Black Survival</title>  
-<meta name="keywords" content="lumiacraft,eternal return,black survival,route generator,route calculator,build,builds,build planner,build optimizer,route,routes,route planner,route optimizer,plan,plans,plan optimizer,optimization"/>
-<meta name="description" content="LumiaGuide is a plan optimization tool for Eternal Return: Black Survival. You can generate, optimize, and share builds and plans for ERBS."/>
+  <title>LumiaGuide - Plan Optimization Tool for Eternal Return: Black Survival</title>  
+  <meta name="keywords" content="lumiacraft,eternal return,black survival,route generator,route calculator,build,builds,build planner,build optimizer,route,routes,route planner,route optimizer,plan,plans,plan optimizer,optimization"/>
+  <meta name="description" content="LumiaGuide is a plan optimization tool for Eternal Return: Black Survival. You can generate, optimize, and share builds and plans for ERBS."/>
 </head>
 <body>
 </body>
+</html>
