--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
   <title>LumiaGuide - Plan Optimization Tool for Eternal Return: Black Survival</title>  
   <meta name="keywords" content="lumiacraft,eternal return,black survival,route generator,route calculator,build,builds,build planner,build optimizer,route,routes,route planner,route optimizer,plan,plans,plan optimizer,optimization"/>
   <meta name="description" content="LumiaGuide is a plan optimization tool for Eternal Return: Black Survival. You can generate, optimize, and share builds and plans for ERBS."/>
+  <link rel="stylesheet" href="css/style.css?v=0.0"/>
 </head>
 <body>
+  <div class="main">
+    <div class="left_pane">
+      <div class="build_pane"></div>
+      <div class="build_stats_pane"></div>
+    </div>
+    <div class="center_pane">
+      <div class="shop_pane"></div>
+      <div class="plan_pane"></div>
+    </div>
+    <div class="right_pane">
+      <div class="map_pane"></div>
+      <div class="item_add_pane"></div>
+    </div>
+  </div>
 </body>
 </html>
