create basic pane layout

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   <link rel="stylesheet" href="css/style.css?v=0.0"/>
 </head>
 <body>
-  <div class="main">
-    <div class="left_pane">
-      <div class="build_pane"></div>
-      <div class="build_stats_pane"></div>
-    </div>
-    <div class="center_pane">
-      <div class="shop_pane"></div>
-      <div class="plan_pane"></div>
-    </div>
-    <div class="right_pane">
-      <div class="map_pane"></div>
-      <div class="item_add_pane"></div>
+  <div class="main wrapper">
+    <div class="main pane">
+      <div class="left pane">
+        <div class="build items pane"></div>
+        <div class="build stats pane"></div>
+      </div>
+      <div class="center pane">
+        <div class="shop pane"></div>
+        <div class="plan pane"></div>
+      </div>
+      <div class="right pane">
+        <div class="map pane"></div>
+        <div class="item-add pane"></div>
+      </div>
     </div>
   </div>
 </body>
