--- a/index.html
+++ b/index.html
@@ -11,16 +11,28 @@
   <div class="main wrapper">
     <div class="main pane">
       <div class="left pane">
-        <div class="build items pane"></div>
-        <div class="build stats pane"></div>
+        <div class="build items pane">
+          <h1>Display Item Build here</h1>
+        </div>
+        <div class="build stats pane">
+          <h1>Display Stats for Build Here</h1>
+        </div>
       </div>
       <div class="center pane">
-        <div class="shop pane"></div>
-        <div class="plan pane"></div>
+        <div class="shop pane">
+          <h1>Display Searchable List of All Items Here</h1>
+        </div>
+        <div class="plan pane">
+          <h1>Display Path Options Here</h1>
+        </div>
       </div>
       <div class="right pane">
-        <div class="map pane"></div>
-        <div class="item-add pane"></div>
+        <div class="map pane">
+          <h1>Display Map & Zone Options Here</h1>
+        </div>
+        <div class="item-add pane">
+          <h1>Display List of Additional Items on Path Here</h1>
+        </div>
       </div>
     </div>
   </div>
