--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   <div class="main wrapper">
     <div class="main pane">
       <div class="left pane">
-        <div class="build items pane">
-          <h1>Display Item Build here</h1>
+        <div class="build gear pane">
+          <h1>Display Item Build Here</h1>
+        </div>
+        <div class="build consumables pane">
+          <h1>Display List of Consumables on Path Here</h1>
         </div>
         <div class="build stats pane">
           <h1>Display Stats for Build Here</h1>
