move layout into App

--- a/public/index.html
+++ b/public/index.html
@@ -30,38 +30,14 @@
     </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="main wrapper">
-      <div class="main pane">
-        <div class="left pane">
-          <div class="build gear pane">
-            <h1>Display Item Build Here</h1>
-            <!-- We will put our React component inside this div. -->
-            <div id="like_button_container"></div>
-          </div>
-          <div class="build consumables pane">
-            <h1>Display List of Consumables on Path Here</h1>
-          </div>
-          <div class="build stats pane">
-            <h1>Display Stats for Build Here</h1>
-          </div>
-        </div>
-        <div class="center pane">
-          <div class="shop pane">
-            <h1>Display Searchable List of All Items Here</h1>
-          </div>
-          <div class="plan pane">
-            <h1>Display Path Options Here</h1>
-          </div>
-        </div>
-        <div class="right pane">
-          <div class="map pane">
-            <h1>Display Map & Zone Options Here</h1>
-          </div>
-          <div class="item-add pane">
-            <h1>Display List of Additional Items on Path Here</h1>
-          </div>
-        </div>
-      </div>
-    </div>  
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
